@@ -26,3 +26,9 @@ public class Main extends Application {
 		new LoginView();
 	}
 }
+
+/*
+"vmArgs": "--module-path \"D:\\openjfx-23.0.1_windows-x64_bin-sdk\\javafx-23.0.1\\lib\" --add-modules javafx.controls,javafx.fxml"
+
+
+ */
